--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'cn.bmob.android:bmob-sdk:3.5.5'
+    compile 'cn.bmob.android:bmob-sms:1.0.1'
+
 }
